force-app/main/default/objects/Loan_Request__c/Loan_Request__c.object-meta.xml
<CustomObject>
    <label>Loan  Request</label>
    <nameField>
        <displayFormat>LRQ-{0000000000}</displayFormat>
        <label>Loan  Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>