force-app/main/default/objects/Loan_Request__c/fields/Average_Monthly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Rate__c</fullName>
    <formula>Suma_Credit__c  /  Number_Of_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Monthly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>