force-app/main/default/objects/Loan_Request__c/fields/Expected_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Disbursement_Date__c</fullName>
    <label>Expected Disbursement Date</label>
    <type>Date</type>
</CustomField>