force-app/main/default/objects/Loan_Request__c/fields/Loan_Offer__c.field-meta.xml
<CustomField>
    <fullName>Loan_Offer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Loan Offer</label>
    <referenceTo>Loan_Offer__c</referenceTo>
    <relationshipLabel>Loan Requests</relationshipLabel>
    <relationshipName>Loan_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>