force-app/main/default/objects/Loan_Request__c/fields/Monthly_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Due_Date__c</fullName>
    <label>Monthly Due Date</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>