force-app/main/default/objects/Loan_Request__c/fields/Number_Of_Months__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Months__c</fullName>
    <label>Number Of Months</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>