force-app/main/default/objects/Loan_Request__c/fields/Periods_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Periods_Per_Year__c</fullName>
    <label>Periods Per Year</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>