force-app/main/default/objects/Loan_Request__c/fields/Risk_Fee__c.field-meta.xml
<CustomField>
    <fullName>Risk_Fee__c</fullName>
    <label>Risk Fee</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>