force-app/main/default/objects/Loan_Request__c/fields/Suma_Credit__c.field-meta.xml
<CustomField>
    <fullName>Suma_Credit__c</fullName>
    <label>Suma Credit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>